---
source: archetect_templating/tests/test_parser.rs
description: "{{ foo is even }}\n{{ foo is not even }}\n{{ not foo is even }}"
input_file: archetect_templating/tests/parser-inputs/test.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Test {
                    name: "even",
                    expr: Var {
                        id: "foo",
                    } @ 1:3-1:6,
                    args: [],
                } @ 1:10-1:14,
            } @ 1:0-1:14,
            EmitRaw {
                raw: "\n",
            } @ 1:17-2:0,
            EmitExpr {
                expr: UnaryOp {
                    op: Not,
                    expr: Test {
                        name: "even",
                        expr: Var {
                            id: "foo",
                        } @ 2:3-2:6,
                        args: [],
                    } @ 2:14-2:18,
                } @ 2:14-2:18,
            } @ 2:0-2:18,
            EmitRaw {
                raw: "\n",
            } @ 2:21-3:0,
            EmitExpr {
                expr: UnaryOp {
                    op: Not,
                    expr: Test {
                        name: "even",
                        expr: Var {
                            id: "foo",
                        } @ 3:7-3:10,
                        args: [],
                    } @ 3:14-3:18,
                } @ 3:3-3:18,
            } @ 3:0-3:18,
        ],
    } @ 0:0-3:21,
)
